# vault

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose-vault.yml  docker-compose.yml  test_credentials
certs/: ca.pem  cert.pem  key.pem
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
proto/: admin.proto  common.proto  health.proto  internal.proto  vault.proto
secrets/pepper/: pepper
src/: client.rs  lib.rs  main.rs  server_not_used.rs
src/db/: mod.rs  mongo.rs  password.rs  policy.rs
src/kafka/: consumer.rs  mod.rs  producer.rs
src/model/: algorithm.rs  algorthm.rs  config.rs  events.rs  mod.rs  password.rs  policy.rs
src/model/algorithm/: argon.rs  bcrypt.rs  mod.rs  pbkdf2.rs
src/services/: complete_reset.rs  context.rs  create_policy.rs  delete_password.rs  delete_password_type.rs  get_active_policy.rs  get_password_types.rs  get_policies.rs  hash_password.rs  import_passwords.rs  make_active.rs  mod.rs  reset_time.rs  set_time.rs  start_reset.rs  validate_password.rs
src/utils/: config.rs  context.rs  errors.rs  health.rs  mod.rs  mongo.rs  time_provider.rs
src/utils/kafka/: consumer.rs  mod.rs  producer.rs
tests/: password_integration_tests.rs  password_tests.rs  validate_tests.rs
tests/common/: mod.rs
