[package]
name = "vault"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[[bin]] # Bin to run the Vault gRPC server
#name = "vault-server"
#path = "src/server.rs"
#
#[[bin]] # Bin to run the Vault gRPC client
#name = "vault-client"
#path = "src/client.rs"

# The binary is a lib wrapped as a binary - this allows us to write integration tests that can create
# and initialise the app using the same code used in the binary.
[lib]
name = "vault"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "vault"
path = "src/main.rs"
test = false            # Don't run doctests.

[features]
default = ["kafka"]
kafka = ["rdkafka"]

[dependencies]
# For Tracing.
tracing = "0.1.26"
tracing-subscriber = "0.2.18"

# Open-telemetry and jaeger
#opentelemetry-prometheus = "0.4.0"
opentelemetry = { version = "0.15.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.14.0", features = ["tokio"] }
tracing-opentelemetry = "0.14.0"

# For other stuff.
serde = "1.0.126"
serde_json = "1.0.64"
derive_more = "0.99.14"
parking_lot = "0.11.1"
#itertools = "0.10.1"

# For gRPC
tonic = "0.5.2"
prost = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
# For stream request / response.
futures = { version = "0.3.15", default-features = false, features = ["alloc"] }

# For Config.
dotenv = "0.15.0"
config = "0.11.0"
ansi_term = "0.12.1"

# For Mongo. Beta required for Tokio 1.x
mongodb = "2.0.0-beta.3"
#mongodb = "1.2.2"
#bson = "1.2.2"
bson = { version = "2.0.0-beta.3", features = [ "chrono-0_4", "u2i" ] }
uuid = "0.8.2"
chrono = { version = "0.4.19", features = ["serde"] }
#futures = "0.3.15"

# For Kafka
rdkafka = { version = "0.26.0", optional = true }

# Hashing
rand_core = "0.6.3"
argon2 = "0.2.2"
bcrypt = "0.10.1"
pbkdf2 = "0.9.0"

[build-dependencies]
tonic-build = "0.5"

[dev-dependencies]
parking_lot = "0.11.1"
# Allows timeouts on test clients.
#tower = "0.4.7"
tokio-retry = "0.3.0"
lazy_static = "1.4.0"