[package]
name = "vault"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# The binary is a lib wrapped as a binary - this allows us to write integration tests that can create
# and initialise the app using the same code used in the binary.
[lib]
name = "vault"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "vault"
path = "src/main.rs"
test = false            # Don't run doctests.

[dependencies]
# For Tracing.
tracing = "0.1.26"
tracing-subscriber = "0.2.18"

# Open-telemetry and jaeger
opentelemetry = { version = "0.15.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.14.0", features = ["tokio"] }
tracing-opentelemetry = "0.14.0"

# For other stuff.
serde = "1.0.126"
serde_json = "1.0.64"
derive_more = "0.99.14"
parking_lot = "0.11.1"
rand = "0.8.4"

# For gRPC
tonic = { version = "0.5.2", features = ["tls"] }
tonic-health = "0.4.1"
prost = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs"] }
futures = { version = "0.3.15", default-features = false, features = ["alloc"] }
tokio-stream = { version =  "0.1", features = ["net"] }

# For Config.
dotenv = "0.15.0"
config = "0.11.0"
ansi_term = "0.12.1"

# For Mongo. Beta required for Tokio 1.x
mongodb = "2.0.0"
bson = { version = "2.0.0", features = [ "chrono-0_4" ] }
uuid = "0.8.2"
chrono = { version = "0.4.19", features = ["serde"] }

# For Kafka
rdkafka = "0.26.0"
lazy_static = "1.4.0"

# Hashing
rand_core = "0.6.3"
argon2 = "0.2.2"
bcrypt = "0.10.1"
pbkdf2 = "0.9.0"
base64 = "0.13.0"

[build-dependencies]
tonic-build = "0.5"

[dev-dependencies]
parking_lot = "0.11.1"
tokio-retry = "0.3.0"